Portfolio-xd-version-html/main.css
/* ... */
@media screen and (min-width: 901px) and (max-width: 1000px) {
  html {
    font-size: 20px;
  }
}

@media screen and (min-width: 1001px) and (max-width: 1100px) {
  html {
    font-size: 21px;
  }
}

@media screen and (min-width: 1101px) and (max-width: 1200px) {
  html {
    font-size: 22px;
  }
}

@media screen and (min-width: 1201px) and (max-width: 1300px) {
  html {
    font-size: 23px;
  }
}

@media screen and (min-width: 1301px) and (max-width: 1400px) {
  html {
    font-size: 24px;
  }
}

@media screen and (min-width: 1401px) and (max-width: 1500px) {
  html {
    font-size: 25px;
  }
}

@media screen and (min-width: 1501px) and (max-width: 1600px) {
  html {
    font-size: 26px;
  }
}

@media screen and (min-width: 1601px) and (max-width: 1700px) {
  html {
    font-size: 27px;
  }
}

@media screen and (min-width: 1701px) and (max-width: 1800px) {
  html {
    font-size: 27px;
  }
}

@media screen and (min-width: 1801px) and (max-width: 1900px) {
  html {
    font-size: 27px;
  }
}


@media screen and (min-width: 1901px) {
  html {
    font-size: 27px;
  }
}

body {
  margin: 0px;
  padding: 0px;
  font-family: Raleway;
}




/*navigation start*/



.nav-container {
  margin:0em;
  padding: 0em;
  display: flex;
  
  align-items: center;
  width: 100%;
  height: 60px;
  background: #0000003f;
  --ease: all 300ms ease;
transition: var(--ease);
z-index: 2;

}


@media screen and (min-width:751px){
.fade-in {
	height: 50px;
  background: #1b1b1be5;

}
.nav-container{
  position: fixed;
}
}
.nav-container nav{
  display:flex;
  position:fixed;
  width:100%;
  justify-content:flex-end;
  text-decoration: none;
  display: none;

  z-index:1;
  margin-top:18px;
  padding: 0em;
}




.nav-container nav ul{
display:flex;
 justify-content:space-around;
 margin-right:1rem;
 text-decoration: none;
 list-style-type: none;
 margin:0em;
 padding: 0em;
}

.nav-container nav ul a{
  text-decoration:none;
  color: white;

}

nav ul li{
   letter-spacing: 0px;
  font-weight:400;
  padding-left:1.5em;
  padding-right:1.5em;
  color:white;
  font-size:14px;

}

nav ul li a{
  padding-bottom:.2em;
 
  transition: .2s ease-in;
}

nav ul li a:hover{
  border-bottom: 1px solid black;
}

@media screen and (min-width: 751px) {
.nav-container nav{
  display: flex;
}
}


/*drop down menu test*/
/* Dropdown Button */
.dropbtn-style {
  background-color: transparent;
  color: rgba(0, 0, 0, 0.651);
  padding: 16px;
  border: none;
}

.hamburger-menu-container .dropdown #dropbtn {
  cursor: pointer;
}

/* the menu icon is broken and needs to be fixed */
.hamburger-menu-container .dropdown #dropbtn i {
  font-size: 28px;
  color: white;
}

/* Dropdown button on hover & focus */
.hamburger-menu-container .dropdown .dropbtn:hover, .dropbtn:focus {
  background-color: #413F3F;
}

/* The container <div> - needed to position the dropdown content */
.hamburger-menu-container {
  display: none;
  position: relative;
  left: -1.5em;
}

.dropdown {
  position: relative;
  display: inline-block;
  float: right;
  right: -.7em;
}

@media screen and (max-width: 750px) {
  .hamburger-menu-container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: end;
    -ms-flex-pack: end;
    justify-content: flex-end;
    width: 100%;
  }
  .nav-links {
    display: none;
  }
  .follow-inside-container {
    display: none;
  }
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #0000003f;
  min-width: 200px;
  -webkit-box-shadow: 1px 1px 1px 1px black;
  box-shadow: 1px 1px 1px 1px black;
  z-index: 1;
  right: 0;
}

/* Links inside the dropdown */
.dropdown-content a {
  color: white;
  padding: 13px 20px;
  text-decoration: none;
  display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
  background-color: #00000069;
}

/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {
  display: block;
}

/*end test*/
.logo {
  position: absolute;
  left: 27px;
  top: 4px;
  width: 25px;
  height: 25px;
  margin: 10px;
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-box-shadow: 2px 2px 0 0 #c4ecfa;
  box-shadow: 2px 2px 0 0 #c4ecfa;
  border-radius: .3em;
}

.logo p {
  position: relative;
  top: -1em;
  left: .3em;
  font-size: 10px;
  color: white;
  -webkit-transform: rotate(315deg);
  transform: rotate(315deg);
}

.logo p span:last-child {
  position: relative;
  top: .4em;
  left: -.2em;
}

@media screen and (min-width:751px){
  .logo{
    position: relative;
    top: -3.7px;
  }
}

nav {
  position: absolute;
  right: 0;
  width: 50px;
  height: 50px;
  margin: 1em;
}

i {
  color: white;
  font-size: 30px;
}

.container-hero-image {
  position: absolute;
  background-image: url("img1.jpg");
  background-repeat: no-repeat;
  background-position: -0% 75%;
  background-size: 597.3px 798.094px;
  width: 100%;
  height: 550px;
  min-height: 550px;
  max-height: 100vh;
  top: 0;
  z-index: -1;
  opacity: .6;
  background-size:     cover;                      /* <------ */
  background-repeat:   no-repeat;
  background-position: center center;
}

@media screen and (max-width: 499px){
  .container-hero-image{
    background-position: -0% 75%;
    background-size: 597.3px 798.094px;
    width: 100%;
    height: 550px;
  }
} 

@media screen and (min-width: 500px) and (max-width: 530px) {
  .container-hero-image {
    background-size: 627.165px 837.9987px;
    background-position: -0% 73.3%;
  }
}

@media screen and (min-width: 531px) and (max-width: 560px) {
  .container-hero-image {
    background-size: 657.03px 877.9034px;
    background-position: -0% 71.6%;
  }
}

@media screen and (min-width: 561px) and (max-width: 590px) {
  .container-hero-image {
    background-size: 686.895px 917.8081px;
    background-position: -0% 69.9%;
  }
}
/* ... */

